@@ -1,0 +1,89 @@
+Check-Script: gir
+Author: Simon McVittie <smcv@debian.org>
+Type: binary, source
+Info: Checks for GObject-Introspection mini-policy compliance
+Needs-Info: unpacked, bin-pkg-control
+
+Tag: gir-section-not-libdevel
+Severity: normal
+Certainty: certain
+Info: GObject-Introspection XML files
+ (<tt>/usr/share/gir-1.0/Foo-23.gir</tt>) must be made available in
+ a development package in the <tt>libdevel</tt> section of the archive.
+ This is normally the same <tt>libfoo-dev</tt> package that contains
+ other development files.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: gir-in-arch-all-package
+Severity: normal
+Certainty: certain
+Info: GObject-Introspection XML files
+ (<tt>/usr/share/gir-1.0/Foo-23.gir</tt>) must be made available in
+ an architecture-dependent package of the same source.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: gir-missing-typelib-dependency
+Severity: normal
+Certainty: possible
+Info: Development packages that contain GObject-Introspection XML files
+ (<tt>/usr/share/gir-1.0/Foo-23.gir</tt>) must depend on the package
+ containing the corresponding binary typelib, which is conventionally named
+ <tt>gir1.2-foo-23</tt>. The dependency must be strictly versioned
+ (for example <tt>gir1.2-foo-23 (= ${binary:Version})</tt> when using
+ debhelper).
+ .
+ Please ignore and override this tag if the typelib is shipped in a package
+ whose name does not match the typelib's machine-readable name, and the
+ development package correctly depends on that package instead. For example,
+ <tt>gir1.2-glib-2.0</tt> is named for the <tt>GLib-2.0</tt> typelib, but
+ also contains the <tt>GObject-2.0</tt> and <tt>Gio-2.0</tt> typelibs, so
+ it is correct that <tt>libglib2.0-dev</tt> depends on
+ <tt>gir1.2-glib-2.0</tt> but not on <tt>gir1.2-gobject-2.0</tt> or
+ <tt>gir1.2-gio-2.0</tt>.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: typelib-package-name-does-not-match
+Severity: normal
+Certainty: possible
+Info: GObject-Introspection binary typelibs (<tt>Foo-23.typelib</tt>)
+ should normally be made available in a package named gir1.2-foo-23.
+ .
+ Please ignore and override this tag if the typelib is deliberately shipped
+ in a package whose name does not match the typelib's machine-readable name.
+ For example, <tt>gir1.2-glib-2.0</tt> is named for the <tt>GLib-2.0</tt>
+ typelib, but also contains the <tt>GObject-2.0</tt> and <tt>Gio-2.0</tt>
+ typelibs; this is unconventional, but is allowed.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: typelib-section-not-introspection
+Severity: normal
+Certainty: certain
+Info: GObject-Introspection binary typelibs (<tt>Foo-23.typelib</tt>)
+ should be made available in a GObject-Introspection package
+ in the <tt>introspection</tt> section of the archive,
+ normally named <tt>gir1.2-foo-23</tt>.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: typelib-in-arch-all-package
+Severity: serious
+Certainty: certain
+Info: GObject-Introspection binary typelibs
+ (<tt>Foo-23.typelib</tt>) are architecture-dependent, therefore
+ they must appear in architecture-dependent packages.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
+
+Tag: typelib-not-in-multiarch-directory
+Severity: wishlist
+Certainty: certain
+Info: Public GObject-Introspection binary typelibs
+ (<tt>Foo-23.typelib</tt>) should be installed in the multi-arch
+ directory <tt>/usr/lib/MULTIARCH-TUPLE/girepository-1.0</tt>.
+
+Tag: typelib-missing-gir-depends
+Severity: normal
+Certainty: certain
+Info: GObject-Introspection binary typelibs
+ (<tt>Foo-23.typelib</tt>) can depend on other typelibs. To generate
+ appropriate dependencies in the binary package, they must have
+ <tt>Depends: ${gir:Depends}</tt> in the control file.
+Ref: /usr/share/doc/gobject-introspection/policy.txt
