@@ -5,7 +5,7 @@ Enable-Tags-From-Check: apache2, application-not-library, automake, binaries,
  changelog-file, changes-file, conffiles, control-file, control-files,
  copyright-file, cruft, dbus, deb-format, debconf, debhelper, debian-readme,
  debian-source-dir, description, duplicate-files, fields, filename-length, files,
- group-checks, huge-usr-share, infofiles, init.d, java, lintian, manpages,
+ gir, group-checks, huge-usr-share, infofiles, init.d, java, lintian, manpages,
  md5sums, menu-format, menus, nmu, obsolete-sites, ocaml, patch-systems, phppear,
  po-debconf, rules, scripts, shared-libs, source-copyright, standards-version,
  symlinks, systemd, testsuite, triggers, upstream-metadata, usrmerge,
