@@ -1,0 +1,2 @@
+usr/lib/girepository-1.0/Bad-23.typelib
+usr/share/gir-1.0/Bad-23.gir
