@@ -1,0 +1,1 @@
+usr/lib/libgood-42-0-dummy
