@@ -1,0 +1,2 @@
+usr/share/gir-1.0/Good-42.gir
+usr/lib/libgood-42-dev-dummy
