@@ -1,0 +1,1 @@
+usr/lib/*/libperfect-42-0-dummy
