@@ -1,0 +1,2 @@
+usr/share/gir-1.0/Perfect-42.gir
+usr/lib/*/libperfect-42-dev-dummy
