@@ -44,6 +44,9 @@ lintian (2.5.51) UNRELEASED; urgency=medium
     + [NT] Improve the empty-binary-package tag by adding more common
       files that should be ignored.  Thanks to Helmut Grohne for all the
       research behind it.  (Closes: #856857)
+  * checks/gir.{desc,pm}:
+    + [NT] Add check for gir packages written by Simon McVittie.
+      (Closes: #695345)
   * checks/init.d.{desc,pm}:
     + [NT] Remove check for init.d scripts accessing /usr without a
       $remote_fs dependency as /usr must now be mounted by the initramfs.
